writerfilter/source/dmapper/SdtHelper.hxx
@@ -87,6 +87,10 @@ public:
     {
         return m_sDateFormat;
     }
+
+    /// Decides if we have enough information to create a date control.
+    bool validateDateFormat();
+
     OUStringBuffer& getLocale()
     {
         return m_sLocale;
